@@ -1,3 +1,11 @@
+1999-04-09  Jochen Wiedmann  <joe@ispsoft.de> (0.2010)
+
+	* lib/RPC/PlServer/Comm.pm (Read): Added 'maxmessage' option
+	  to omit "Out of memory" bugs (Liraz Siri <liraz_siri@usa.net>).
+	* Lots of minor bug fixes in the docs of RPC::PlServer and
+	  RPC::PlClient. Alf Wachsmann <alf@ifh.de>
+	* lib/RPC/PlServer/Comm.pm: Added 'compression' option.
+
 1999-01-13  Jochen Wiedmann  <joe@ispsoft.de> (0.2003)
 
 	* lib/RPC/PlServer.pm (CallMethod): Fixed bug in lock
